<?xml version="1.0"?>
<package>
  <name>dlut_motor_hokuyo</name>
  <version>0.0.0</version>
  <description>The dlut_motor_hokuyo package</description>

  <author email="zhuang@dlut.edu.cn">Zhuang Yan</author>
  <author>Yan Fei</author>
  <author>Dong Bing Bing</author>

  <maintainer email="zhuang@dlut.edu.cn">Zhuang Yan</maintainer>
  <maintainer email="wunailiang@gmail.com">Wu Nai Liang</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dlut_motor_hokuyo</url>
  <url type="repository">https://github.com/ZhuangYanDLUT/dlut_smartrob.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
